タイトルを「ロボットプログラミング教室キッズ - 子供の未来を創造するプログラミング教育２」に変更し、全体のHTML構造を見直しました。メタタグやセクションの内容はそのまま維持しつつ、デザインの一貫性を保つための調整を行いました。

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ロボットプログラミング教室キッズ - 子供の未来を創造するプログラミング教育</title>
+    <title>ロボットプログラミング教室キッズ - 子供の未来を創造するプログラミング教育２</title>
     <meta name="description" content="月額8,800円で子供の創造力と論理的思考を育むロボットプログラミング教室。少人数制で丁寧に指導。今なら入会金無料キャンペーン実施中！">
     
     <!-- OGP設定 -->
